Add header section with navigation bar

--- a/index.html
+++ b/index.html
@@ -5,8 +5,33 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Assignment-1</title>
     <link rel="stylesheet" href="styles/styles.css">
+
+    <!-- Google font's link -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+
+
 </head>
-<body>
-    
+<body class="font-primary">
+
+
+    <header>
+        <nav>
+            <h2 class="nav-logo">LOGO</h2>
+            <button class="nav-btn btn-primary">Sign Up</button>
+        </nav>
+
+        <div class="header-hero">
+                <h1 class="hero-title">Cool Dark UI Template for Webflow Agencies!</h1>
+                <button class="hero-btn btn-primary">Stay Focused</button>
+        </div>
+
+    </header>
+
+    <main></main>
+    <footer></footer>
+
+
 </body>
 </html>
