Add action section with content and image

--- a/index.html
+++ b/index.html
@@ -29,7 +29,21 @@
 
     </header>
 
-    <main></main>
+    <main>
+        <!-- Action section starts -->
+        <section class="action">
+
+            <div class="action-content">
+                <h3 class="action-title">See It in Action</h3>
+                <h4 class="action-sub-title">Explore the live preview and imagine your brand in this bold new look.</h4>
+                <button class="action-btn btn-primary">Launch Live Preview</button>
+            </div>
+
+            <img class="action-image" src="Assets/wc-mini.png" alt="ProductImage">
+        </section>
+
+
+    </main>
     <footer></footer>
 
 
