Add Productive section

--- a/index.html
+++ b/index.html
@@ -42,6 +42,26 @@
             <img class="action-image" src="Assets/wc-mini.png" alt="ProductImage">
         </section>
 
+        <!-- Productive user section starts -->
+         <section class="productive">
+            <h3 class="productive-title">Joined Thousands of Productive Users</h3>
+            <div class="productive-data">
+                <div class="productive-items">
+                    <div class="productive-item">50K</div>
+                    <div class="productive-label">Active Users</div>
+                </div>
+                <div class="productive-items">
+                    <div class="productive-item">2M+</div>
+                    <div class="productive-label">Focus Sessions</div>
+                </div>
+                <div class="productive-items">
+                    <div class="productive-item">95%</div>
+                    <div class="productive-label">Satisfaction Rate</div>
+                </div>
+            </div>
+           
+         </section>
+
 
     </main>
     <footer></footer>
