Add ready to focus section

--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
            
          </section>
 
-         <!-- what user say's section starts -->
-          <section class="reviews">
+        <!-- what user say's section starts -->
+        <section class="reviews">
 
             <h3 class="reviews-title">What our users say</h3>
 
@@ -143,10 +143,21 @@
                         </div>
                     </div>
                 </div>
-                
+
             </div>
 
-          </section>
+        </section>
+
+        <!-- focus section starts -->
+        <section class="focus-container">
+            <div class="focus-content">
+                <h3 class="focus-title">Ready to focus better</h3>
+                <p class="focus-sub-title">This template instantly leveled up our presence.” – Studio Vertex</p>
+                <button class="focus-btn btn-primary">Get Started Free</button>
+            </div>
+            <img src="Assets/wc-big.png" alt="banner" class="focus-img">
+        </section>
+
     </main>
     <footer></footer>
 
