Add let's get in touch section

--- a/index.html
+++ b/index.html
@@ -158,6 +158,20 @@
             <img src="Assets/wc-big.png" alt="banner" class="focus-img">
         </section>
 
+        <!-- Let's get in touch section starts -->
+         <section class="contact-form">
+            <h3 class="contact-title">Let’s Get in Touch</h3>
+
+            <form class="info-collector">
+                <label for="email">Email</label>
+                <input type="email" name="email" id="email" placeholder="example@gmail.com">
+                <label for="name">Name</label>
+                <input type="name" name="name" id="name" placeholder="full Name">
+                <label for="textarea">Message</label>
+                <textarea name="textarea" id="textarea" placeholder="write a message..."></textarea>
+                <button type="submit" class="btn-primary">Get in Touch</button>
+            </form>
+         </section>
     </main>
     <footer></footer>
 
