--- a/index.html
+++ b/index.html
@@ -173,7 +173,20 @@
             </form>
          </section>
     </main>
-    <footer></footer>
+
+
+    <footer>
+        <div class="footer-content">
+            <h3 class="footer-title">LOGO</h3>
+            <p class="footer-sub-title">Ready to elevate your online presence? Contact us today to discuss your project and discover how we can bring your vision to life.</p>
+        </div>
+        <ul class="footer-nav">
+            <li>Home</li>
+            <li>About</li>
+            <li>How it Works</li>
+            <li>Services</li>
+        </ul>
+    </footer>
 
 
 </body>
