--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
                 <label for="email">Email</label>
                 <input type="email" name="email" id="email" placeholder="example@gmail.com">
                 <label for="name">Name</label>
-                <input type="name" name="name" id="name" placeholder="full Name">
+                <input type="text" name="name" id="name" placeholder="full Name">
                 <label for="textarea">Message</label>
                 <textarea name="textarea" id="textarea" placeholder="write a message..."></textarea>
                 <button type="submit" class="btn-primary">Get in Touch</button>
